--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^5.6.5
   google_fonts: ^6.2.1
   flutter_launcher_icons: ^0.14.3
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
